# bevy-wasm-example

./: Cargo.toml  README.md  index.html
src/: main.rs
