[package]
name = "browser_game"
version = "0.1.0"
edition = "2021"


[dependencies]
bevy = { version = "0.14.1" }
rand = "0.8.5"
wasm-bindgen = "0.2.93"

[workspace]
resolver = "2"

[profile.dev]
opt-level = 1


[profile.dev.package."*"]
opt-level = 3


[profile.release]
codegen-units = 1

lto = "thin"

[profile.wasm-release]
inherits = "release"
opt-level = "s"
strip = "debuginfo"
